fix z-index
datasette-cluster-map was hiding autosuggest list from omnisearch

--- a/datasette_ui_extras/static/omnisearch.css
+++ b/datasette_ui_extras/static/omnisearch.css
@@ -2,6 +2,11 @@ body.table .awesomplete {
   width: 60%;
 }
 
+body.table .awesomplete ul {
+  z-index: 999;
+}
+
+
 body.table .awesomplete #_search {
   width: 100%;
 }
